# useriam_face_auth

./: .gitattributes  BUILD.gn  OAT.xml  README.en.md  README.md  README_ZH.md  README_zh.md  bundle.json  face_auth.gni  ohos.build  useriam.gni
common/: BUILD.gn
common/inc/: face_auth_defines.h
common/include/: constant.h  face_auth_defines.h  face_auth_log_wrapper.h  on_faceauth.h  on_faceauth_proxy.h  on_faceauth_stub.h  return_callback.h
common/log/include/: faceauth_log_wrapper.h
common/log/src/: faceauth_log_wrapper.cpp
common/logs/: iam_logger.h
common/src/: on_faceauth_proxy.cpp  on_faceauth_stub.cpp
common/utils/: iam_para2str.h
frameworks/ets/ani/: BUILD.gn
frameworks/ets/ani/idl/: ohos.userIAM.faceAuth.taihe
frameworks/ets/ani/src/: ani_constructor.cpp  ohos.userIAM.faceAuth.impl.cpp
frameworks/ipc/: BUILD.gn  face_auth_framework_map
frameworks/ipc/inc/: face_auth_client.h  face_auth_proxy.h  face_auth_stub.h  iface_auth.h  iface_auth_ipc_interface_code.h
frameworks/ipc/src/: face_auth_client.cpp  face_auth_client_impl.cpp  face_auth_proxy.cpp  face_auth_stub.cpp
frameworks/js/napi/: BUILD.gn
frameworks/js/napi/inc/: face_auth_manager.h
frameworks/js/napi/src/: face_auth_manager.cpp  face_auth_napi.cpp
interfaces/innerkits/faceauth/: BUILD.gn
interfaces/innerkits/faceauth/include/: face_auth_client.h  face_auth_death_recipient.h  face_auth_innerkit.h  face_auth_proxy.h  face_auth_stub.h  iface_auth.h
interfaces/innerkits/faceauth/src/: face_auth_client.cpp  face_auth_death_recipient.cpp  face_auth_innerkit.cpp  face_auth_proxy.cpp  face_auth_stub.cpp
interfaces/kits/: BUILD.gn
interfaces/kits/include/: useriam_auth_kit.h
interfaces/kits/napi/faceauth_mgr/: BUILD.gn  faceauth_mgr.cpp  faceauth_mgr.h  faceauth_native_event.cpp  faceauth_native_event.h
interfaces/kits/src/: useriam_auth_kit.cpp
sa_profile/: 922.xml  942.json  942.xml  BUILD.gn  (+5 more)
services/: BUILD.gn  Faceauth.creator  Faceauth.files  Faceauth.includes
services/ca_mock/include/: adaptor_algorithm.h  buffer.h  defines.h  face_auth_ca.h  face_auth_func.h
services/ca_mock/src/: adaptor_algorithm.cpp  buffer.cpp  face_auth_ca.cpp  face_auth_func.cpp
services/common/include/: constant.h  face_auth_defines.h  return_callback.h
services/common/log/include/: face_auth_log_wrapper.h
services/common/src/: constant.cpp  return_callback.cpp
services/faceauth/: BUILD.gn
services/faceauth/include/: face_auth_algo_dispatcher.h  face_auth_bms_adapter.h  face_auth_camera.h  face_auth_camera_buffer_listener.h  face_auth_common_event_subscriber.h  face_auth_event.h  face_auth_event_handler.h  face_auth_executor_callback.h  face_auth_get_info_callback.h  face_auth_manager.h  face_auth_query_callback.h  face_auth_req.h  face_auth_service.h  face_auth_thread_pool.h  iface_auth_algo_adaptee.h  iface_auth_algo_target.h  iface_auth_ca.h
services/faceauth/mock/include/: face_auth_algo_adapter.h  face_auth_algo_impl.h  face_auth_ca.h
services/faceauth/mock/src/: face_auth_algo_adapter.cpp  face_auth_algo_impl.cpp  face_auth_ca.cpp
services/faceauth/src/: face_auth_bms_adapter.cpp  face_auth_camera.cpp  face_auth_camera_buffer_listener.cpp  face_auth_common_event_subscriber.cpp  face_auth_event.cpp  face_auth_event_handler.cpp  face_auth_executor_callback.cpp  face_auth_get_info_callback.cpp  face_auth_manager.cpp  face_auth_query_callback.cpp  face_auth_req.cpp  face_auth_service.cpp  face_auth_thread_pool.cpp
services/faceauth/test/: BUILD.gn
services/faceauth/test/mock/include/: i_bundle_mgr_mock.h  mock_bundle_mgr.h  mock_distributed_permission_kit.h
services/faceauth/test/mock/src/: mock_bms_adapter.cpp  mock_bundle_mgr.cpp  mock_distributed_permission_kit.cpp
services/faceauth/test/unittest/face_auth_manager_test/: BUILD.gn
services/inc/: face_auth_all_in_one_executor_hdi.h  face_auth_driver_hdi.h  face_auth_executor_callback_hdi.h  face_auth_executor_hdi.h  face_auth_hdi.h  face_auth_interface_adapter.h  face_auth_service.h  finite_state_machine.h  finite_state_machine_impl.h  isa_command_processor.h  iscreen_brightness_task.h  sa_command_manager.h  screen_brightness_manager.h  screen_brightness_task.h  service_ex_manager.h  thread_handler.h
services/include/: face_auth_driver_hdi.h  face_auth_executor_callback_hdi.h  face_auth_executor_hdi.h  face_auth_service.h
services/src/: face_auth_all_in_one_executor_hdi.cpp  face_auth_driver_hdi.cpp  face_auth_executor_callback_hdi.cpp  face_auth_executor_hdi.cpp  face_auth_interface_adapter.cpp  face_auth_service.cpp  finite_state_machine_impl.cpp  sa_command_manager.cpp  screen_brightness_manager.cpp  screen_brightness_task.cpp  service_ex_manager.cpp  thread_handler_impl.cpp
services/temp/include/: adaptor_algorithm.h  buffer.h  defines.h  face_auth_ca.h  face_auth_func.h
services/temp/src/: adaptor_algorithm.cpp  buffer.cpp  face_auth_ca.cpp  face_auth_func.cpp
services_ex/: BUILD.gn  face_auth_service_ex_map
services_ex/inc/: finite_state_machine_builder.h  screen_brightness_task.h
services_ex/src/: finite_state_machine_builder.cpp  finite_state_machine_impl.cpp  screen_brightness_task.cpp  thread_handler_impl.cpp
test/fuzztest/common_fuzzer/: BUILD.gn
test/fuzztest/face_auth_service_fuzzer/: BUILD.gn
test/fuzztest/faceauthexecutorhdi_fuzzer/: BUILD.gn  face_auth_executor_hdi_fuzzer.cpp  face_auth_executor_hdi_fuzzer.h
test/fuzztest/faceauthservice_fuzzer/: BUILD.gn  face_auth_service_fuzzer.cpp  face_auth_service_fuzzer.h
test/unittest/: BUILD.gn  face_auth_all_in_one_executor_hdi_unit_test.cpp  face_auth_driver_hdi_unit_test.cpp  face_auth_executor_callback_hdi_unit_test.cpp  face_auth_executor_hdi_unit_test.cpp  face_auth_screen_brightness_test.cpp  face_auth_service_perm_test.cpp  face_auth_service_test.cpp  sa_command_manager_unit_test.cpp  state_machine_test.cpp
test/unittest/mock/: mock_face_auth_interface_adapter.h  mock_iall_in_one_executor.h  mock_iexecute_callback.h  mock_iexecutor.h  mock_iface_auth_interface.h  mock_isa_command_processor.h  mock_thread_handler.h
(+214 files in other folders)
