# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/useriam/faceauth/useriam.gni")
import("//build/ohos.gni")
group("faceauth_system") {
  if (is_standard_system) {
    deps = [
      "${useriam_common_path}:faceauth_common",
      "${face_auth_innerkits_path}:face_auth_innerkits",
      "${useriam_auth_kits_path}:faceauth_auth_kits",
      "${face_auth_services_path}:face_auth_services",
      "${useriam_path}/sa_profile:face_auth_sa_profile",
    ]
  }
}


group("faceauth_build_module_standard_test") {
  testonly = true
  deps = []
  if (is_standard_system) {
    deps += [
      "${face_auth_services_path}/test:unittest",
    ]
  }
}

