# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

useriam_path = "//base/useriam/faceauth"
useriam_common_path = "${useriam_path}/common"
face_auth_innerkits_path = "${useriam_path}/interfaces/innerkits/faceauth"
useriam_auth_kits_path = "${useriam_path}/interfaces/kits"
face_auth_services_path = "${useriam_path}/services/faceauth"
useriam_sa_path="${useriam_path}/sa_profile"
aafwk_path = "//foundation/aafwk/standard"
appexecfwk_path = "//foundation/appexecfwk/standard"
face_auth_test_app_path = "//test/xts/acts/useriam/faceauth/cpp_api_scene_test/resource/faceauthtestability/abilitySrc"

