# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/user_iam/face_auth/useriam.gni")
import("//build/ohos.gni")

config("faceauth_config") {
  include_dirs = [
    "//third_party/json/include",
    "${useriam_common_path}/log/include",
    "${useriam_common_path}/include",
  ]
}

ohos_shared_library("faceauth_common") {
  sources = [
    "log/src/faceauth_log_wrapper.cpp",
    "src/constant.cpp",
    "src/on_faceauth_proxy.cpp",
    "src/on_faceauth_stub.cpp",
  ]

  defines = [
    "FACEAUTH_LOG_TAG = \"FaceAuth\"",
    "LOG_DOMAIN = 0xD002422",
  ]

  public_configs = [
    ":faceauth_config",
    "//utils/native/base:utils_config",
  ]

  deps = [
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/graphic/standard:libsurface",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  subsystem_name = "useriam"
  part_name = "faceauth"
}
