# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/aafwk/standard/aafwk.gni")

ohos_shared_library("faceauthservice") {
  sources = [
    "src/face_auth_driver_hdi.cpp",
    "src/face_auth_executor_callback_hdi.cpp",
    "src/face_auth_executor_hdi.cpp",
    "src/face_auth_service.cpp",
  ]
  include_dirs = [
    "inc",
    "//base/user_iam/face_auth/common/inc",
    "//base/user_iam/user_auth/common/logs",
    "//base/user_iam/user_auth/common/utils",
  ]

  deps = [
    "//base/user_iam/face_auth/frameworks/face_auth:faceauth_framework",
    "//base/user_iam/user_auth/common/executors:userauth_executors",
  ]
  external_deps = [
    "faceauth_device_driver_interface:libfaceauth_proxy_1.0",
    "hiviewdfx_hilog_native:libhilog",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "user_auth:coauth_framework",
    "utils_base:utils",
  ]
  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  if (ability_runtime_graphics) {
    external_deps += [ "graphic_standard:surface" ]
  }
  subsystem_name = "useriam"
  part_name = "face_auth"
}
