# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")

config("faceauth_framework_public_config") {
  include_dirs = [ "inc" ]
}

ohos_shared_library("faceauth_framework") {
  sources = [
    "src/face_auth_client.cpp",
    "src/face_auth_proxy.cpp",
  ]

  public_configs = [ ":faceauth_framework_public_config" ]

  configs = [ "//base/useriam/user_auth_framework/common:iam_log_config" ]

  include_dirs = [
    "//base/useriam/user_auth_framework/common/utils",
    "//base/useriam/face_auth/common/inc",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtoken_setproc",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  if (ability_runtime_graphics) {
    external_deps += [ "graphic_standard:surface" ]
  }

  subsystem_name = "useriam"
  part_name = "face_auth"
}

ohos_source_set("faceauth_framework_stub") {
  sources = [ "src/face_auth_stub.cpp" ]

  configs = [ "//base/useriam/user_auth_framework/common:iam_log_config" ]

  public_configs = [ ":faceauth_framework_public_config" ]

  include_dirs = [
    "//base/useriam/user_auth_framework/common/utils",
    "//base/useriam/face_auth/common/inc",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
  ]

  if (ability_runtime_graphics) {
    external_deps += [ "graphic_standard:surface" ]
    include_dirs +=
        [ "//foundation/graphic/graphic_2d/frameworks/surface/include" ]
  }
}
