# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/user_iam/face_auth/useriam.gni")
import("//build/ohos.gni")

config("faceauth_auth_kits_config") {
  visibility = [ ":*" ]

  include_dirs = []

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  defines = [
    "APP_LOG_TAG = \"FaceAuth\"",
    "LOG_DOMAIN = 0xD002422",
  ]
}

config("faceauth_auth_kits_public_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "//third_party/json/single_include",
    "${useriam_common_path}/include",
    "${face_auth_innerkits_path}/include",
    "${useriam_auth_kits_path}/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
  ]
}

ohos_shared_library("faceauth_auth_kits") {
  sources = [ "${useriam_auth_kits_path}/src/useriam_auth_kit.cpp" ]

  configs = [ ":faceauth_auth_kits_config" ]

  public_configs = [ ":faceauth_auth_kits_public_config" ]

  deps = [
    "${useriam_common_path}:faceauth_common",
    "${face_auth_innerkits_path}:face_auth_innerkits",
    # "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    # "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    # "//utils/native/base:utils",
    "//foundation/graphic/standard:libsurface",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  subsystem_name = "useriam"
  part_name = "faceauth"
}
