# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

ohos_unittest("FaceAuthServiceUnitTest") {
  module_out_path = "user_iam/face_auth"

  sources = [
    "face_auth_driver_hdi_unit_test.cpp",
    "face_auth_executor_callback_hdi_unit_test.cpp",
    "face_auth_executor_hdi_unit_test.cpp",
  ]

  include_dirs = [
    "mock",
    "//base/user_iam/user_auth/common/logs",
    "//base/user_iam/user_auth/common/utils",
    "//base/user_iam/user_auth/common/executors/include/public",
    "//base/user_iam/face_auth/common/inc",
    "//base/user_iam/face_auth/services/inc",
    "//base/user_iam/user_auth/interfaces/inner_api/co_auth/",
  ]

  deps = [
    "//base/user_iam/face_auth/services:faceauthservice",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "face_auth_device_driver_interface:libface_auth_proxy_1.0",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "user_auth_framework:coauth_framework",
    "utils_base:utils",
  ]
  remove_configs = [ "//build/config/compiler:no_exceptions" ]
}

group("unittest") {
  testonly = true

  deps = [ ":FaceAuthServiceUnitTest" ]
}
