# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")
ohos_shared_library("faceauth") {
  include_dirs = [
    "inc",
    "//base/useriam/user_auth_framework/common/logs",
    "//base/useriam/face_auth/common/inc",
    "//base/useriam/user_auth_framework/common/utils",
  ]

  sources = [
    "src/face_auth_manager.cpp",
    "src/face_auth_napi.cpp",
  ]

  deps = [ "//base/useriam/face_auth/frameworks/inner_api:faceauth_framework" ]
  if (ability_runtime_graphics) {
    deps += [ "//foundation/graphic/graphic_2d:libsurface" ]
  }
  remove_configs = [ "//build/config/compiler:no_exceptions" ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
    "utils_base:utils",
  ]

  relative_install_dir = "module/useriam"

  part_name = "face_auth"
}
